--- a/Comedian Soundboard.Windows/MainPage.xaml
+++ b/Comedian Soundboard.Windows/MainPage.xaml
@@ -17,7 +17,7 @@
     </Page.Transitions>
 
     <Page.Resources>
-        <Style x:Key="ListViewItemStyle1" TargetType="ListViewItem">
+        <Style x:Key="ListViewItemWithoutHighlightingStyle" TargetType="ListViewItem">
             <Setter Property="HorizontalAlignment" Value="Center"></Setter>
             <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}"/>
             <Setter Property="FontSize" Value="{ThemeResource ControlContentThemeFontSize}"/>
@@ -53,7 +53,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="90"></RowDefinition>
+            <!--<RowDefinition Height="90"></RowDefinition>-->
         </Grid.RowDefinitions>
         <Grid.Background>
             <ImageBrush ImageSource="Assets/ComedyBackground2.jpg"></ImageBrush>
@@ -77,10 +77,11 @@
             </TextBlock>
         </Grid>
 
-        <ListView ItemsSource="{Binding Groups}"
+        <ListView x:Name="ComedianListView"
+                  ItemsSource="{Binding Groups}"
                   SelectionMode="None"
                   IsItemClickEnabled="True"
-                  ItemContainerStyle="{StaticResource ListViewItemStyle1}"
+                  ItemContainerStyle="{StaticResource ListViewItemWithoutHighlightingStyle}"
                   Grid.Row="1">
             <ListView.ItemTemplate>
                 <DataTemplate>
@@ -138,7 +139,7 @@
                PointerExited="PointerImage_Released">
         </Image>
 
-        <Grid Grid.Row="2">
+        <!--<Grid Grid.Row="2">
             <UI:AdControl ApplicationId="a68cc9d2-57ba-4afa-b57d-775ab4c7f44a" Style="{StaticResource HorizontalLongAd}" IsAutoRefreshEnabled="True" AutoRefreshIntervalInSeconds="30" AdUnitId="268704" />
         </Grid>
         <Grid Grid.Row="2" Margin="0,89,0,0">
@@ -162,6 +163,6 @@
             <UI:AdControl ApplicationId="a68cc9d2-57ba-4afa-b57d-775ab4c7f44a" Style="{StaticResource HorizontalLongAd}" IsAutoRefreshEnabled="True" AutoRefreshIntervalInSeconds="30" AdUnitId="268704" />
             <UI:AdControl ApplicationId="a68cc9d2-57ba-4afa-b57d-775ab4c7f44a" Style="{StaticResource HorizontalLongAd}" IsAutoRefreshEnabled="True" AutoRefreshIntervalInSeconds="30" AdUnitId="268704" />
             <UI:AdControl ApplicationId="a68cc9d2-57ba-4afa-b57d-775ab4c7f44a" Style="{StaticResource HorizontalLongAd}" IsAutoRefreshEnabled="True" AutoRefreshIntervalInSeconds="30" AdUnitId="268704" />
-        </Grid>
+        </Grid>-->
     </Grid>
 </Page>
