Wire up recommended images in RootPage

--- a/Comedian Soundboard.WindowsPhone/RootPage.xaml
+++ b/Comedian Soundboard.WindowsPhone/RootPage.xaml
@@ -56,7 +56,7 @@
                     </TextBlock>
 
                     <ListView SelectionMode="None"
-                      ItemsSource="{Binding Groups}"
+                      ItemsSource="{Binding SoundGroups}"
                       IsItemClickEnabled="True"
                       Grid.Row="1">
                         <ListView.ItemContainerStyle>
@@ -121,6 +121,57 @@
                                TextAlignment="Left"
                                Margin="0,-25,0,0">
                     </TextBlock>
+
+                    <ListView SelectionMode="None"
+                      ItemsSource="{Binding ImageGroups}"
+                      IsItemClickEnabled="True"
+                      Grid.Row="1">
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem">
+                                <Setter Property="HorizontalContentAlignment"
+                                Value="Stretch">
+                                </Setter>
+                            </Style>
+                        </ListView.ItemContainerStyle>
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <Grid Margin="0,30,0,0" HorizontalAlignment="Center" >
+                                    <TextBlock 
+                                Text="{Binding Title}" 
+                                FontSize="25" 
+                                Foreground="White"
+                                FontWeight= "Medium"
+                                TextAlignment="Center" 
+                                VerticalAlignment="Top">
+                                    </TextBlock>
+
+                                    <Grid Margin="0,45,0,0">
+                                        <Ellipse
+                                x:Name="ImageBorder"
+                                Width="228"
+                                Height="228"
+                                StrokeThickness="4"
+                                Loaded="Border_Loaded">
+                                        </Ellipse>
+                                        <Ellipse
+                                Width="220" 
+                                Height="220" 
+                                Stretch="Fill" 
+                                PointerPressed="Pointer_Pressed"
+                                PointerReleased="Pointer_Released" 
+                                PointerCanceled="Pointer_Released"
+                                PointerCaptureLost="Pointer_Released"
+                                PointerExited="Pointer_Released"
+                                Tapped="SoundGroup_Click">
+                                            <Ellipse.Fill>
+                                                <ImageBrush ImageSource="{Binding ImagePath}"/>
+                                            </Ellipse.Fill>
+                                        </Ellipse>
+                                    </Grid>
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
                 </Grid>
             </PivotItem>
         </Pivot>
