Image crawling now completely integrated into app

--- a/Comedian Soundboard.WindowsPhone/ImagePage.xaml
+++ b/Comedian Soundboard.WindowsPhone/ImagePage.xaml
@@ -21,7 +21,27 @@
     </Page.Background>
     
     <Grid>
-
+        <ListView SelectionMode="None"
+                  ItemsSource="{Binding Images}"
+                  IsItemClickEnabled="True">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="HorizontalContentAlignment"
+                                Value="Stretch">
+                    </Setter>
+                </Style>
+            </ListView.ItemContainerStyle>
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Grid Margin="0,7,0,0">
+                        <Image Source="{Binding ImagePath}" 
+                           HorizontalAlignment="Stretch"
+                           VerticalAlignment="Stretch">
+                        </Image>
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
 
     </Grid>
 </Page>
